src/App.css
@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');

#{
  margin: 0 auto;
}

.App {
  height: 100vh;
  width: 100vw;
  overflow-x: scroll;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.navBar{
  display: inline-flex;
  flex-direction: row;
  width: 100vw;
  height: 10vh;
  position: fixed;
  z-index: 10;
}

.decorativeDiv{
  background-color: navy;
  position: absolute;
  display: inline-flex;
  flex-direction: row;
  margin-left: 55vw;
  width: 70vw;
  height: 100vh;
  z-index: 10;
  transform: skewX(35deg);
  overflow-x: hidden;
}

.logo{
  margin-left: 10vw;
  margin-top: 2vh;
  background-image: url("./charleslamb3264.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 100%;
  height: 62px;
  width: 260px;
}

.navOptions{
  display: inline-flex;
  flex-direction: row;
  margin-left: 18vw;
  margin-top: 3vh;

}

.home{
  color: white;
  font-family: 'Indie Flower', cursive;
  font-size: 28px;
  font-weight: bolder;
  z-index: 10;
  border-right: solid rgb(134, 193, 212);
  padding-right: 1vw;
}

.portfolio{
  margin-left: 1vw;
  color: white;
  font-family: 'Indie Flower', cursive;
  font-size: 28px;
  font-weight: bolder;
  z-index: 10;
  border-right: solid rgb(134, 193, 212);
  padding-right: 1vw;
}

.lamb{
  margin-left: 1vw;
  color: white;
  font-family: 'Indie Flower', cursive;
  font-size: 28px;
  font-weight: bolder;
  z-index: 10;
  border-right: solid rgb(134, 193, 212);
  padding-right: 1vw;
}

.causes{
  margin-left: 1vw;
  color: white;
  font-family: 'Indie Flower', cursive;
  font-size: 28px;
  font-weight: bolder;
  z-index: 10;
  border-right: solid rgb(134, 193, 212);
  padding-right: 1vw;
}

.about{
  margin-left: 1vw;
  color: white;
  font-family: 'Indie Flower', cursive;
  font-size: 28px;
  font-weight: bolder;
  z-index: 10;
  border-right: solid rgb(134, 193, 212);
  padding-right: 1vw;
}

.journal{
  margin-left: 1vw;
  color: white;
  font-family: 'Indie Flower', cursive;
  font-size: 28px;
  font-weight: bolder;
  z-index: 10;

}

.leftFoldSection{
  display: inline-flex;
  flex-direction: row;
  margin-top: 180px;
  margin-left: 30px;
  width: 40vw;
  height: 50vh;
}

.socialMediaButtons{
background-color: silver;
margin-top: 1rem;
border: 2px black solid;
border-collapse: collapse;
width: 3.5vw;
height: 40vh;
left: 1px;
}

.greeting{
  height: 8vh;
  width: 20vw;
  margin-top: 2rem;
  margin-left: 9.7vw;
  font-family: 'Indie Flower', cursive;
  font-size: 40px;
  font-weight: bolder;
  color: navy;
  position: absolute;
}

.name{
  height: 8vh;
  width: 20vw;
  margin-top: 6rem;
  margin-left: 7vw;
  font-family: 'Indie Flower', cursive;
  font-size: 40px;
  font-weight: bolder;
}

.topSlogan{
  height: 5vh;
  width: 30vw;
  margin-top: 10rem;
  margin-left: 9.9vw;
  position: absolute;
}

.bottomSlogan{
  height: 5vh;
  width: 30vw;
  margin-top: 13rem;
  margin-left: 9.9vw;
  position: absolute;
}

.buttons{
  height: 6.5vh;
  width: 30vw;
  margin-top: 16.2rem;
  margin-left: 9.9vw;
  position: absolute;
  display: inline-flex;
  flex-direction: row;
}

.portfolioButton{
  background-color: navy;
  color: white;
  font-weight: bold;
  border-radius: 5px;
  width: 120px;
  height: 50px;
  border: solid navy;
}

.contactButton{
  background-color: rgb(250, 178, 43);
  color: white;
  font-weight: bolder;
  margin-left: 3vw;
  border-radius: 5px;
  width: 120px;
  height: 50px;
  border: solid orange;
}

.rightFoldSection{
  display: inline-flex;
  flex-direction: row;
  background-image: url('./_DPL1167-removebg-preview.png');
  background-repeat: no-repeat;
  margin-top: 126px;
  margin-left: 20vw;
  width: 30vw;
  height: 80vh;
  z-index: 11;
  position: absolute;
}

.skewedBackgroundDecoration{
  background-color: rgb(250, 178, 43);
  display: inline-flex;
  flex-direction: row;
  margin-top: 190px;
  margin-left: 4vw;
  width: 60vw;
  height: 50vh;
  z-index: 10;
  position: absolute;
  transform: skew(25deg, 10deg);
}

